@@ -1,25 +1,24 @@
 package com.frogdevelopment.nihongo.ftp;
 
-import static com.frogdevelopment.nihongo.ftp.LoggingOutputStream.LogLevel.INFO;
-
 import lombok.extern.slf4j.Slf4j;
-
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.stream.Collectors;
-
 import org.apache.commons.net.PrintCommandListener;
 import org.apache.commons.net.ftp.FTP;
 import org.apache.commons.net.ftp.FTPClient;
 import org.apache.commons.net.ftp.FTPFile;
 import org.apache.commons.net.ftp.FTPReply;
 import org.springframework.beans.factory.DisposableBean;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.PrintWriter;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Collection;
+
+import static com.frogdevelopment.nihongo.ftp.LoggingOutputStream.LogLevel.DEBUG;
 
 @Slf4j
 public class FtpClient implements DisposableBean {
@@ -31,14 +30,14 @@ public class FtpClient implements DisposableBean {
 
     private final FTPClient ftp;
 
-    public FtpClient(FtpProperties ftpProperties) {
+    public FtpClient(final FtpProperties ftpProperties) {
         this.server = ftpProperties.getServer();
         this.port = ftpProperties.getPort();
         this.user = ftpProperties.getUser();
         this.password = ftpProperties.getPassword();
 
         this.ftp = new FTPClient();
-        this.ftp.addProtocolCommandListener(new PrintCommandListener(new PrintWriter(new LoggingOutputStream(log, INFO))));
+        this.ftp.addProtocolCommandListener(new PrintCommandListener(new PrintWriter(new LoggingOutputStream(log, DEBUG))));
     }
 
     public void open() throws IOException {
@@ -67,6 +66,10 @@ public class FtpClient implements DisposableBean {
         ftp.retrieveFile(source, new FileOutputStream(destination));
     }
 
+    public InputStream retrieveFileStream(final String source) throws IOException {
+        return ftp.retrieveFileStream(source);
+    }
+
     public void putFileToPath(final String path, final File file) throws IOException {
         try (final var inputStream = new FileInputStream(file)) {
             ftp.setFileType(FTP.BINARY_FILE_TYPE);
@@ -81,6 +84,6 @@ public class FtpClient implements DisposableBean {
         final FTPFile[] files = ftp.listFiles(path);
         return Arrays.stream(files)
                 .map(FTPFile::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
